RESOLVED FIXED51315
WKView leak when performing key equivalents
https://bugs.webkit.org/show_bug.cgi?id=51315
Summary WKView leak when performing key equivalents
mitz
Reported 2010-12-19 18:37:15 PST
<rdar://problem/8769525> Patch forthcoming.
Attachments
Ensure that self is released in the early return case of -performKeyEquivalent: (1.71 KB, patch)
2010-12-19 18:40 PST, mitz
sam: review+
mitz
Comment 1 2010-12-19 18:40:09 PST
Created attachment 76968 [details] Ensure that self is released in the early return case of -performKeyEquivalent:
mitz
Comment 2 2010-12-19 18:44:58 PST
Note You need to log in before you can comment on or make changes to this bug.