<rdar://problem/8769525> WKView leak when performing key equivalents https://bugs.webkit.org/show_bug.cgi?id=51315

Reviewed by Sam Weinig.

* UIProcess/API/mac/WKView.mm:
(-[WKView performKeyEquivalent:]): Use a RetainPtr to ensure that the view is released in the
early return code path.



Canonical link: https://commits.webkit.org/64671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74329 268f45cc-cd09-0410-ab3c-d52691b4dbfc